adding php stuff

--- a/cleanmachine.html
+++ b/cleanmachine.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>W
+<html>
     <head>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -12,7 +12,7 @@
     </head>
     <body>
 	<!-- Five minute countdown timer -->
-	    <div class="wrapper">
+	    <div id="wrapper">
             <h1>Clean Machine</h1>
 	
 	<!-- The area where chores are added -->
